# lerobot-libero

./: pyproject.toml  requirements.txt
libero/libero/envs/: venv.py
